--- a/css/style.css
+++ b/css/style.css
@@ -359,69 +359,6 @@ header {
   background: white;
 }
 
-/* .slick-initialized.slick-slider {
-  display: flex;
-  height: auto;
-}
-
-.works_slider .slick-prev {
-  left: -240px;
-}
-
-.slick-prev,
-.slick-next {
-  width: 0;
-  height: 0;
-}
-
-.works_slider .slick-next {
-  right: -240px;
-}
-
-.works_slider .slick-prev:before {
-  content: "";
-  display: block;
-  width: 54px;
-  height: 54px;
-  border-top: 5px solid #56402b;
-  border-right: 5px solid #56402b;
-  transform: rotate(-135deg);
-}
-
-.slick-slider .slick-list {
-  display: flex;
-}
-
-.works_slider {
-  position: absolute;
-  top: 30%;
-  left: 25%;
-  display: flex;
-}
-
-.works_slider-img .slick-slide .slick-cloned {
-  width: 100%;
-  height: auto;
-} */
-
-.swiper-horizontal {
-  position: absolute;
-  top: 25%;
-  left: 20%;
-}
-
-.swiper--wrapper {
-  /* wrapperのサイズを調整 */
-  width: 740px;
-  height: 300px;
-}
-
-.swiper-slide {
-  /* スライドのサイズを調整、中身のテキスト配置調整、背景色 */
-  width: 100%;
-  height: 100%;
-}
-
 .swiper-slide {
   transition: transform 0.6s;
 }
@@ -431,6 +368,30 @@ header {
 .swiper-slide-duplicate-prev,
 .swiper-slide-duplicate-next {
   transform: scale(0.85);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 54px;
+  color: #56402b;
+}
+
+.swiper {
+  position: absolute;
+  top: 25%;
+  left: -10%;
+  width: 742px;
+  height: 300px;
+  display: table-cell; /*上下中央*/
+  text-align: center; /*左右中央*/
+  vertical-align: middle; /*上下中央*/
+}
+
+.swiper-slide img {
+  height: 300px;
+  width: auto;
+  object-fit: cover;
+  margin: 0 auto;
 }
 
 #about_contents {
