--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
   background-image: url(../images/background.jpg);
   background-size: cover;
   background-repeat: repeat-x;
+  flex-shrink: 0;
 }
 
 .top {
@@ -147,21 +148,28 @@ header {
 }
 
 .header_wrap {
+  position: relative;
   text-align: right;
+  height: 100%;
 }
 
 .portfolio_top03 {
-  /* position: relative; */
-  width: 100%;
+  position: absolute;
+  right: 0;
   height: 100%;
+  z-index: 2000;
 }
 
 #scroll_container {
   width: 100%;
   z-index: 1000;
+  display: flex;
 }
 
 .nav_list {
+  position: absolute;
+  top: 0;
+  right: 0;
   padding-right: 200px;
   text-align: right;
 }
@@ -183,6 +191,9 @@ header {
 }
 
 .top_scroll {
+  position: absolute;
+  bottom: 0;
+  right: 0;
   display: flex;
   align-items: center;
   font-size: 20px;
@@ -278,14 +289,22 @@ header {
   margin-top: 52px;
 }
 
-.card-img {
+.card-img div {
   width: 180px;
   height: 180px;
   border-radius: 50%;
   background: yellow;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.card-img {
+  position: relative;
+}
+
+.card-img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .card_wrapper {
@@ -399,9 +418,10 @@ header {
 
 .swiper-slide img {
   height: 300px;
-  width: auto;
-  object-fit: cover;
+  width: 100%;
+  object-fit: contain;
   margin: 0 auto;
+  object-position: center;
 }
 
 #about_contents {
