--- a/css/works_list.css
+++ b/css/works_list.css
@@ -95,7 +95,7 @@ header {
 }
 
 .nav_list {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 50px;
   text-align: right;
@@ -125,7 +125,7 @@ header {
 
 .works_title {
   text-align: center;
-  margin: -154px 0 238px;
+  margin: -154px 0 220px;
 }
 
 .works_title-main {
@@ -134,6 +134,7 @@ header {
 }
 
 .works_container {
+  position: relative;
   margin-bottom: 195px;
 }
 
@@ -141,29 +142,19 @@ header {
   font-size: 20px;
 }
 
-.works_wrapper {
+#works_wrapper-01,
+#works_wrapper-02,
+#works_wrapper-03,
+#works_wrapper-04 {
   position: relative;
   display: flex;
   align-items: flex-end;
   justify-content: center;
   gap: 8%;
   color: #56402b;
+  margin-bottom: 12%;
+  padding-top: 4%;
 }
-
-.works_wrapper02 {
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  gap: 8%;
-  color: #56402b;
-  margin-top: -60px;
-  margin-bottom: 150px;
-}
-
-/* .works_wrapper + .works_wrapper {
-  margin-top: 120px;
-} */
 
 .gradation {
   position: absolute;
@@ -171,7 +162,7 @@ header {
   left: 0;
   z-index: -2;
   width: 100%;
-  height: 240px;
+  height: 270px;
   background: linear-gradient(
     to bottom,
     #ffffff00,
@@ -183,19 +174,20 @@ header {
   filter: blur(30px);
 }
 
+.works_content {
+  width: 30%;
+}
+
 .pc_img {
   width: 342px;
-  height: 241px;
 }
 
 .pc-tablet-sp_img {
   width: 406px;
-  height: 213px;
 }
 
 .banner_img {
-  height: 233px;
-  object-fit: contain;
+  width: 400px;
 }
 
 .works_service {
@@ -203,9 +195,9 @@ header {
 }
 
 .stone1 {
-  display: flex;
-  justify-content: flex-start;
-  margin-top: -150px;
+  position: absolute;
+  top: 70%;
+  left: 0;
 }
 
 .stone_img1 {
@@ -213,12 +205,9 @@ header {
 }
 
 .stone2 {
-  /* position: fixed;
-  top: 0;
-  left: 0; */
-  display: flex;
-  justify-content: flex-end;
-  margin-top: -100px;
+  position: absolute;
+  top: 15%;
+  right: 0;
 }
 
 .stone_img2 {
@@ -231,7 +220,7 @@ header {
 
 .contact_text {
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 2.25;
   color: #56402b;
 }
@@ -251,6 +240,14 @@ header {
   justify-content: center;
   margin: 30px auto 0;
   font-size: 45px;
+}
+
+.contact_btn a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact_btn::after {
@@ -285,6 +282,7 @@ header {
   right: 0;
   display: flex;
   justify-content: flex-end;
+  z-index: -1;
 }
 
 .bottom_tree {
