--- a/css/works_list.css
+++ b/css/works_list.css
@@ -72,7 +72,7 @@ header {
 .portfolio_title {
   position: absolute;
   top: 10%;
-  left: 75px;
+  left: 5%;
 }
 
 .portfolio_title01 {
@@ -214,15 +214,118 @@ header {
   width: 134px;
 }
 
+@media screen and (max-width: 1100px) {
+  .gradation {
+    height: 270px;
+  }
+
+  .portfolio_title01 {
+    font-size: 35px;
+  }
+
+  .pc_img,
+  .pc-tablet-sp_img,
+  .banner_img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio_tree img {
+    width: 67%;
+  }
+
+  .portfolio_title {
+    position: absolute;
+    top: 7%;
+    left: 5%;
+  }
+
+  .portfolio_title01 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+
+  .portfolio_title02 {
+    font-size: 12px;
+  }
+
+  .works_title {
+    margin-top: 0;
+    margin-bottom: 100px;
+  }
+
+  .works_title-main {
+    font-size: 50px;
+  }
+
+  .works_list-sub {
+    font-size: 20px;
+  }
+
+  .works_container {
+    margin-bottom: 0;
+  }
+
+  #works_wrapper-01,
+  #works_wrapper-02,
+  #works_wrapper-03,
+  #works_wrapper-04 {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0;
+    padding-top: 0;
+  }
+
+  .gradation {
+    position: absolute;
+    top: 4%;
+    left: 0;
+    height: 230px;
+  }
+
+  .gradation::after {
+    position: absolute;
+    top: 150%;
+    left: 0;
+    width: 100%;
+    height: 230px;
+    content: "";
+    background: linear-gradient(
+      to bottom,
+      #ffffff00,
+      #dbcb7b 45%,
+      #dbcb7b 70%,
+      #ffffff00
+    );
+    opacity: 0.9;
+    filter: blur(30px);
+  }
+
+  .works_content {
+    width: 66%;
+    margin-bottom: 140px;
+  }
+
+  .works_service,
+  .works_about {
+    font-size: 14px;
+  }
+}
+
 .contact {
   position: relative;
 }
 
-.contact_text {
+.pc_contact_text {
   text-align: center;
   font-size: 18px;
   line-height: 2.25;
   color: #56402b;
+}
+
+.sp_contact_text {
+  display: none;
 }
 
 .contact_btn {
@@ -269,6 +372,7 @@ header {
   font-style: normal;
   color: #56402b;
   margin-top: 128px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
@@ -278,7 +382,7 @@ header {
 
 .bottom_img {
   position: absolute;
-  top: -100px;
+  bottom: -30px;
   right: 0;
   display: flex;
   justify-content: flex-end;
@@ -287,4 +391,74 @@ header {
 
 .bottom_tree {
   width: 802px;
+}
+
+@media screen and (max-width: 1100px) {
+  .stone_img1 {
+    width: 70%;
+  }
+
+  .stone_img2 {
+    width: 95.2px;
+  }
+
+  .contact_text {
+    font-size: 16px;
+  }
+
+  .contact_btn {
+    width: 300px;
+    height: 75px;
+    font-size: 30px;
+  }
+
+  .copyright {
+    margin-bottom: 30px;
+  }
+
+  .bottom_img {
+    position: absolute;
+    bottom: -30px;
+    right: 0;
+  }
+
+  .bottom_tree {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .pc_contact_text {
+    display: none;
+  }
+
+  .sp_contact_text {
+    display: block;
+    text-align: center;
+    color: #56402b;
+    font-size: 14px;
+    line-height: 1.7;
+  }
+
+  .contact_btn {
+    width: 230px;
+    height: 56px;
+    font-size: 20px;
+  }
+
+  .contact_btn::after {
+    position: absolute;
+    /* top: 40%; */
+    right: 10%;
+    content: "";
+    width: 13px; /* くの字を山なりに見た時、左側の長さ */
+    height: 13px; /* くの字を山なりに見た時、右側の長さ */
+    border-top: 2px solid #ffffff; /* くの字を山なりに見た時、左側の太さと色 */
+    border-right: 2px solid #ffffff; /* くの字を山なりに見た時、右側の太さと色 */
+    transform: rotate(45deg); /* くの字の向き */
+  }
+
+  .copyright {
+    font-size: 12px;
+  }
 }
